; ModuleID = '/home/carl/AnghaBench/micropython/ports/esp8266/extr_esp_mphal.c___assert_func.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/esp8266/extr_esp_mphal.c___assert_func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [21 x i8] c"assert:%s:%d:%s: %s\0A\00", align 1
@mp_type_AssertionError = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [15 x i8] c"C-level assert\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__assert_func(i8* %0, i32 %1, i8* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load i8*, i8** %7, align 8
  %12 = load i8*, i8** %8, align 8
  %13 = call i32 @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i8* %9, i32 %10, i8* %11, i8* %12)
  %14 = call i32 @mp_raise_msg(i32* @mp_type_AssertionError, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

declare dso_local i32 @printf(i8*, i8*, i32, i8*, i8*) #1

declare dso_local i32 @mp_raise_msg(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
